@@ -1,6 +1,7 @@
 0.08
  - Fix Changelog file.
  - Fix Makefile.PL and use lib.
+ - Rename examples to better names.
  - Update Module::Install to 1.21 version.
  - Update author github username.
  - Update copyright years.
